--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,13 +1,10 @@
-<div class="row justify-content-center">
-  <app-stepper [currentStep]="3" data-id="stepperComponent"></app-stepper>
-</div>
 <div class="row justify-content-center mt-4 mb-0">
-  <h1
-    class="text-center"
-    data-id="overviewHeading"
-  >
+  <h1 class="text-center" data-id="overviewHeading">
     {{ 'poll.checkData' | translate }}
   </h1>
+</div>
+<div class="row justify-content-center">
+  <app-stepper [currentStep]="3" data-id="stepperComponent"></app-stepper>
 </div>
 <div class="row px-3">
   <div class="col">
