--- a/src/app/create-appointment/create-appointment.component.html
+++ b/src/app/create-appointment/create-appointment.component.html
@@ -1,22 +1,27 @@
-<div class="row justify-content-center">
-  <app-stepper [currentStep]="0" data-id="stepperComponent"></app-stepper>
-</div>
 <div class="row justify-content-center mt-4 mb-0">
   @if (!isAdmin) {
-    <h1 class="text-center mb-2" data-id="addDetailsHeading">
+    <h1 class="text-center mb-2" data-id="addDetailsHeading" id="add-details-heading">
       {{ 'poll.addDetails' | translate }}
     </h1>
   }
   @if (isAdmin) {
-    <h1 class="text-center">
+    <h1 class="text-center" id="change-details-heading">
       {{ 'poll.change' | translate }}
     </h1>
   }
 </div>
+<div class="row justify-content-center">
+  <app-stepper [currentStep]="0" data-id="stepperComponent"></app-stepper>
+</div>
 @if (isAdmin) {
   <app-admin-info></app-admin-info>
 }
-<form (ngSubmit)="onSubmit()" [formGroup]="detailsForm" class="row justify-content-center wizard">
+<form
+  (ngSubmit)="onSubmit()"
+  [formGroup]="detailsForm"
+  class="row justify-content-center wizard"
+  [attr.aria-labelledby]="isAdmin ? 'change-details-heading' : 'add-details-heading'"
+>
   <div class="col-11 col-lg-8">
     <div class="row justify-content-center px-3">
       <div class="section-container w-100 p-4">
