--- a/src/app/create-suggested-dates/create-suggested-dates.component.html
+++ b/src/app/create-suggested-dates/create-suggested-dates.component.html
@@ -1,28 +1,28 @@
-<div class="row justify-content-center">
-  <app-stepper [currentStep]="1" data-id="stepperComponent"></app-stepper>
-</div>
 <div class="row justify-content-center mt-4 mb-0">
   @if (!isAdmin) {
-    <h1
-      class="text-center mb-2"
-      data-id="addDetailsHeading"
-    >
+    <h1 class="text-center mb-2" data-id="dateChooseHeading" id="date-choose-heading">
       {{ 'date.choose' | translate }}
     </h1>
   }
   @if (isAdmin) {
-    <h1
-      class="text-center"
-    >
+    <h1 class="text-center" id="date-change-heading">
       {{ 'date.change' | translate }}
     </h1>
   }
+</div>
+<div class="row justify-content-center">
+  <app-stepper [currentStep]="1" data-id="stepperComponent"></app-stepper>
 </div>
 @if (isAdmin) {
   <app-admin-info></app-admin-info>
 }
 <div class="row justify-content-center">
-  <form (ngSubmit)="onSubmit()" [formGroup]="datesForm" class="col col-lg-9">
+  <form
+    (ngSubmit)="onSubmit()"
+    [formGroup]="datesForm"
+    class="col col-lg-9"
+    [attr.aria-labelledby]="isAdmin ? 'date-change-heading' : 'date-choose-heading'"
+  >
     <!-- section container for each date entry -->
     @for (suggestedDateForm of getSuggestedDatesFromForm().controls; track suggestedDateForm; let i = $index) {
       <div
