feat: exclude selected routes from translation
When an excluded route is visited:
- use default language
- disable language dropdown

- move language handling to `locale.service.ts`

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,13 +51,14 @@
         <li>
           <app-combobox
             [label]="'lang.languageSelect' | translate"
-            [callback]="changeLanguage.bind(this)"
+            [callback]="this.localeService.changeLanguage.bind(this.localeService)"
             [options]="[
               {value: 'Deutsch', callbackArgs: 'de-DE', dataId: 'langGerman'},
               {value: 'English', callbackArgs: 'en-EN', dataId: 'langEnglish'}
             ]"
             [defaultOptionIndex]="localeService.getLocale().languageCode === 'de-DE' ? 0 : 1"
             [dataId]="'languageDropdown'"
+            id="language-dropdown"
           />
         </li>
       </ul>
