refactor: use relative font-sizes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,7 +23,7 @@
 .connectionError {
   margin-left: auto;
   margin-right: auto;
-  font-size: 20px !important;
+  font-size: 1.25rem !important;
   background-color: #f6ccdb;
 }
 
