--- a/src/default.scss
+++ b/src/default.scss
@@ -46,11 +46,11 @@ $suggested-date-desktop-min-width: 140px;
 $suggested-date-desktop-max-width: 160px;
 $suggested-date-mobile-min-width: 70px;
 $suggested-date-mobile-max-width: 100px;
-$font-size-small: 16px;
+$font-size-small: 1rem; /* Baseline font-size: 16px */
 $small-font-size: $font-size-small;
-$font-size-medium: 20px;
-$font-size-large: 32px;
-$font-size-x-large: 32px;
+$font-size-medium: 1.275rem;
+$font-size-large: 2rem;
+$font-size-x-large: 2rem;
 $font-size-small-mobile: 12pt;
 $font-size-medium-mobile: 13pt;
 $font-size-large-mobile: 15pt;
