--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -192,7 +192,7 @@ button.btn-with-image {
     }
 
     .download-cal {
-      font-size: 16px !important;
+      font-size: 1rem !important;
     }
   }
 
