--- a/src/app/shared/components/suggested-date/suggested-date.component.scss
+++ b/src/app/shared/components/suggested-date/suggested-date.component.scss
@@ -43,7 +43,7 @@ div {
 }
 
 .suggested-date-container {
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(md) {
     min-width: $suggested-date-desktop-min-width;
     max-width: $suggested-date-desktop-max-width;
     .column {
@@ -51,9 +51,7 @@ div {
     }
   }
   @include media-breakpoint-down(md) {
+    min-width: $suggested-date-mobile-min-width;
     max-width: $suggested-date-mobile-max-width;
-    .column {
-      width: $suggested-date-mobile-max-width * 0.4;
-    }
   }
 }
