--- a/src/app/poll/mobile-poll-table.component.html
+++ b/src/app/poll/mobile-poll-table.component.html
@@ -101,7 +101,7 @@
                   <app-suggested-date [date]="date" [index]="i"></app-suggested-date>
                 </div>
                 @if (!formHelper.hasAddOrEditParticipantForm()) {
-                  <div class="col-4 d-flex justify-content-center align-items-center">
+                  <div class="col d-flex justify-content-center align-items-center">
                     <button
                       (click)="formHelper.downloadCal(date, i)"
                       class="download-cal btn btn-rounded btn-sm btn-light"
