--- a/src/app/poll/mobile-poll-table.component.scss
+++ b/src/app/poll/mobile-poll-table.component.scss
@@ -27,11 +27,10 @@
 }
 
 .poll-table td.suggested-date {
-  @media (min-width: map-get($grid-breakpoints, sm)) {
-    width: 150px;
-  }
-  @media (min-width: map-get($grid-breakpoints, md)) {
-    width: 180px;
+  width: 180px;
+
+  @media (max-width: 430px) {
+    width: 45%;
   }
 }
 
