--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@ body {
 h1 {
   color: $primary !important;
   font-weight: $font-weight-bold !important;
-  font-size: $font-size-small-mobile !important;
+  font-size: $font-size-large-mobile !important;
   @include media-breakpoint-up(sm) {
     font-size: $font-size-large !important;
   }
