fix: suppress error

--- a/src/app/shared/components/combobox/combobox.component.html
+++ b/src/app/shared/components/combobox/combobox.component.html
@@ -2,6 +2,7 @@
   <div id="combo-label" class="combo-label visually-hidden">
     {{ label }}
   </div>
+  <!--suppress XmlInvalidId | validation just checks for simple strings, at runtime this is fine -->
   <div
     #combobox
     class="combobox btn px-2 d-inline-flex justify-content-between align-items-center"
