--- a/src/app/links/links.component.html
+++ b/src/app/links/links.component.html
@@ -11,12 +11,9 @@
     </div>
     <div class="row mt-4">
       <div class="col section-container pt-3 pb-4">
-        <div
-          class="link-description"
-          data-id="inviteLinkDescription"
-        >
+        <h2 class="link-description" data-id="inviteLinkDescription">
           {{ 'links.invite.description' | translate }}
-        </div>
+        </h2>
         <div class="row g-0 pb-1">
           <div
             class="col text-danger text-bold my-1"
@@ -74,12 +71,9 @@
     </div>
     <div class="row mt-3">
       <div class="col section-container pt-3 pb-4">
-        <div
-          class="link-description"
-          data-id="adminLinkDescription"
-        >
+        <h2 class="link-description" data-id="adminLinkDescription">
           {{ 'links.admin.description' | translate }}
-        </div>
+        </h2>
         <div class="row g-0 pb-1">
           <div
             class="col text-danger text-bold my-1"
