refactor: replace bootstrap date- & timepicker with default
The main reason for this is accessibility. The default picker provides a
 focusable icon after the main input and works better with translations.
Previously the default picker were used only on mobile, which means the
differentiation between desktop & mobile isn't needed anymore.

- combine repeated logic into nested structure (input error handling on
`create-suggested-dates.component.html`)
- introduce min- & maxDate variable
- update `MOMENT_FORMAT_DATE` to reverse format as the picker outputs it
 this way, the displayed value stays in the old format

--- a/src/app/create-suggested-dates/create-suggested-dates.component.scss
+++ b/src/app/create-suggested-dates/create-suggested-dates.component.scss
@@ -105,15 +105,10 @@ $input-background-color: $light-gray;
 
 input {
   background-color: $input-background-color !important;
-
-  border-top-color: $border-color-input !important;
-  border-right-color: $border-color-input !important;
-  border-bottom-color: $border-color-input !important;
+  border-color: $border-color-input !important;
 
   &:focus {
-    border-top-color: $input-focus-border-color !important;
-    border-right-color: $input-focus-border-color !important;
-    border-bottom-color: $input-focus-border-color !important;
+    border-color: $input-focus-border-color !important;
   }
 }
 
