refactor: use constants

--- a/src/app/create-suggested-dates/create-suggested-dates.component.html
+++ b/src/app/create-suggested-dates/create-suggested-dates.component.html
@@ -76,7 +76,7 @@
                   id="suggested-date-start-date-{{i}}"
                   data-id="startDateInput"
                   class="form-control date"
-                  formControlName="startDate"
+                  [formControlName]="SuggestedDatesFormConstants.FORM_KEY_SUGGESTED_DATE_START_DATE"
                   min="{{ minDate }}"
                   max="{{ maxDate }}"
                   [ngClass]="{'disabled': isSuggestedDateFromDatabase(i)}"
@@ -136,7 +136,7 @@
                     id="suggested-date-end-date-{{i}}"
                     data-id="endDateInput"
                     class="form-control date"
-                    formControlName="endDate"
+                    [formControlName]="SuggestedDatesFormConstants.FORM_KEY_SUGGESTED_DATE_END_DATE"
                     min="{{ minDate }}"
                     max="{{ maxDate }}"
                     [ngClass]="{'disabled': isSuggestedDateFromDatabase(i)}"
@@ -198,7 +198,7 @@
                   data-id="startTimeInput"
                   id="suggested-date-start-time-{{i}}"
                   class="form-control time"
-                  formControlName="startTime"
+                  [formControlName]="SuggestedDatesFormConstants.FORM_KEY_SUGGESTED_DATE_START_TIME"
                   [ngClass]="{'disabled': isSuggestedDateFromDatabase(i)}"
                   [attr.aria-disabled]="isSuggestedDateFromDatabase(i)"
                   aria-describedby="start-date-after-end-date end-time-entered-but-no-start-time-entered start-date-time-in-past"
@@ -218,7 +218,7 @@
                   id="suggested-date-end-time-{{i}}"
                   data-id="endTimeInput"
                   class="form-control time"
-                  formControlName="startDateEndTime"
+                  [formControlName]="SuggestedDatesFormConstants.FORM_KEY_SUGGESTED_DATE_START_DATE_END_TIME"
                   [ngClass]="{'disabled': isSuggestedDateFromDatabase(i)}"
                   [attr.aria-disabled]="isSuggestedDateFromDatabase(i)"
                   aria-describedby="start-date-after-end-date end-time-entered-but-no-start-time-entered start-date-time-in-past"
@@ -288,7 +288,7 @@
                   id="suggested-date-start-time-{{i}}"
                   data-id="startTimeInputSecondColumn"
                   class="form-control time"
-                  formControlName="startTime"
+                  [formControlName]="SuggestedDatesFormConstants.FORM_KEY_SUGGESTED_DATE_START_TIME"
                   [ngClass]="{'disabled': isSuggestedDateFromDatabase(i)}"
                   [attr.aria-disabled]="isSuggestedDateFromDatabase(i)"
                   aria-describedby="start-date-after-end-date end-time-entered-but-no-start-time-entered start-date-time-in-past"
@@ -309,7 +309,7 @@
                   id="suggested-date-end-time-different-day-{{i}}"
                   data-id="endTimeInputSecondColumn"
                   class="form-control time"
-                  formControlName="endDateEndTime"
+                  [formControlName]="SuggestedDatesFormConstants.FORM_KEY_SUGGESTED_DATE_END_DATE_END_TIME"
                   [ngClass]="{'disabled': isSuggestedDateFromDatabase(i)}"
                   [attr.aria-disabled]="isSuggestedDateFromDatabase(i)"
                   aria-describedby="start-date-after-end-date end-time-entered-but-no-start-time-entered start-date-time-in-past"
@@ -342,7 +342,7 @@
                 id="suggested-date-description-{{i}}"
                 data-id="descriptionInput"
                 class="form-control"
-                formControlName="description"
+                [formControlName]="SuggestedDatesFormConstants.FORM_KEY_SUGGESTED_DATE_DESCRIPTION"
                 placeholder="{{ 'poll.details.description.description' | translate }}"
                 aria-describedby="description-too-long"
               >
