--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,7 +34,7 @@
               data-id="createPollInput"
               formControlName="title"
               id="title"
-              placeholder="{{ 'poll.title.placeholder' | translate }}"
+              placeholder="{{ 'home.placeholder' | translate }}"
               aria-describedby="required-title invalid-title long-title"
               type="text">
             @if ((title.dirty || title.touched) && !!title.errors?.required) {
