--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -35,7 +35,7 @@
               data-id="passwordInput"
               formControlName="password"
               id="password"
-              placeholder="{{ 'password.placeholder' | translate }}"
+              placeholder="{{ 'home.placeholder' | translate }}"
               type="password"
               aria-describedby="invalid"
             >
