--- a/src/app/poll/mobile-poll-table.component.html
+++ b/src/app/poll/mobile-poll-table.component.html
@@ -42,7 +42,7 @@
         <ng-container [formGroup]="formHelper.getParticipantForm()">
           <div class="col d-flex align-items-center">
             <!-- text input for entering/editing the participant name -->
-            <label class="sr-only" for="name-add">{{ 'participant.name' | translate }}</label>
+            <label for="name-add">{{ 'participant.name' | translate }}</label>
             <input
               required
               [ngClass]="{'has-error': formHelper.getParticipantFormName().invalid
