refactor: put label above input & improve spacing

--- a/src/app/poll/mobile-poll-table.component.scss
+++ b/src/app/poll/mobile-poll-table.component.scss
@@ -14,11 +14,14 @@
   }
 }
 
+select {
+  height: 40px !important;
+}
+
 .btn.btn-transparent {
   display: inline-block;
   width: 45px;
-  height: 100%;
-  vertical-align: middle;
+  height: 47px;
   outline-offset: 0;
 }
 
