fix: missing translation key

--- a/src/app/shared/components/appointment-summary/appointment-summary.component.html
+++ b/src/app/shared/components/appointment-summary/appointment-summary.component.html
@@ -11,11 +11,11 @@
           [cbContent]="absoluteAppointmentUrl"
           class="btn btn-transparent m-0 p-0"
           data-cy="inviteLinkCopy"
-          ngbTooltip="{{ 'links.copy' | translate }}"
+          ngbTooltip="{{ 'links.invite.copy' | translate }}"
           ngxClipboard
           type="button"
         >
-          <img alt="{{ 'links.copy' | translate }}" class="icon" src="assets/copy.svg">
+          <img alt="{{ 'links.invite.copy' | translate }}" class="icon" src="assets/copy.svg">
         </button>
       </div>
     </div>
