refactor: increase font contrast

--- a/src/default.scss
+++ b/src/default.scss
@@ -1,9 +1,9 @@
 $derivate: 'default';
 $primary: #003064;
-$secondary: #d4004b;
+$secondary: #b3003e;
 $light-gray: #F5F6F7;
 $medium-gray: #909498;
-$dark-gray: #666666;
+$dark-gray: #595959;
 $s-h-blue: $primary;
 $s-h-blue-50: #8497af;
 $s-h-blue-15: #d9dfe7;
