--- a/src/app/create-suggested-dates/create-suggested-dates.component.html
+++ b/src/app/create-suggested-dates/create-suggested-dates.component.html
@@ -451,7 +451,8 @@
       (forward)="onSubmit()"
       [hasBackwardButton]="true"
       [hasForwardButton]="true"
-      [isInvalid]="datesForm.invalid" backwardText="{{ 'navigation.back' | translate }}"
+      [isInvalid]="datesForm.invalid"
+      backwardText="{{ 'navigation.back' | translate }}"
       forwardText="{{ 'navigation.next' | translate }}"
     ></app-navigation>
   </form>
